--- a/LibraryManagement.csproj
+++ b/LibraryManagement.csproj
@@ -51,16 +51,24 @@
     <Compile Include="Models\CuonSach.cs" />
     <Compile Include="Models\CuonSachDetailModel.cs" />
     <Compile Include="Models\DauSach.cs" />
+    <Compile Include="Models\DocGia.cs" />
+    <Compile Include="Models\LoaiDocGia.cs" />
     <Compile Include="Models\NhaXuatBan.cs" />
     <Compile Include="Models\TheLoai.cs" />
+    <Compile Include="Models\TheThuVien.cs" />
+    <Compile Include="Models\ThongKe.cs" />
+    <Compile Include="Models\ThuThu.cs" />
     <Compile Include="Repositories\BorrowSlipDetailRepository.cs" />
     <Compile Include="Repositories\BorrowSlipRepository.cs" />
     <Compile Include="Repositories\CuonSachRepository.cs" />
     <Compile Include="Repositories\DauSachRepository.cs" />
     <Compile Include="Repositories\DauSachTacGiaRepository.cs" />
+    <Compile Include="Repositories\DocGiaDAO.cs" />
+    <Compile Include="Repositories\LoaiDocGiaDAO.cs" />
     <Compile Include="Repositories\NXBRepository.cs" />
     <Compile Include="Repositories\TacGiaRepository.cs" />
     <Compile Include="Repositories\TheLoaiRepository.cs" />
+    <Compile Include="Repositories\ThuThuDAO.cs" />
     <Compile Include="Services\BorrowService.cs" />
     <Compile Include="UI\AuthorModal.cs">
       <SubType>Form</SubType>
@@ -74,6 +82,12 @@
     <Compile Include="UI\CategoryModal.Designer.cs">
       <DependentUpon>CategoryModal.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\DocGiaManagement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\DocGiaManagement.Designer.cs">
+      <DependentUpon>DocGiaManagement.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\FormAddCuonSach.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +100,12 @@
     <Compile Include="UI\FormAddDauSach.Designer.cs">
       <DependentUpon>FormAddDauSach.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\FormAddEditDocGia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FormAddEditThuThu.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="UI\FormAddNXB.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +117,15 @@
     </Compile>
     <Compile Include="UI\FormAddTG.Designer.cs">
       <DependentUpon>FormAddTG.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\FormDocGiaManagement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FormThongKe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FormThuThuManagement.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\FormUpdateCuonSach.cs">
       <SubType>Form</SubType>
@@ -132,11 +161,29 @@
     <Compile Include="UserControls\Books\BookControl.Designer.cs">
       <DependentUpon>BookControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\DocGiaManagement.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\DocGiaManagement.Designer.cs">
+      <DependentUpon>DocGiaManagement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\ThuThuManagement.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\ThuThuManagement.Designer.cs">
+      <DependentUpon>ThuThuManagement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\ThuThuUC.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <EmbeddedResource Include="UI\FormAddCuonSach.resx">
       <DependentUpon>FormAddCuonSach.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\FormAddDauSach.resx">
       <DependentUpon>FormAddDauSach.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\FormAddEditThuThu.resx">
+      <DependentUpon>FormAddEditThuThu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\FormAddNXB.resx">
       <DependentUpon>FormAddNXB.cs</DependentUpon>
@@ -179,6 +226,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <None Include="Resources\statistics.png" />
     <None Include="Resources\teamwork.png" />
     <None Include="Resources\voucher.png" />
     <None Include="Resources\reciept.png" />
@@ -196,6 +244,8 @@
     <None Include="Resources\book %281%29.png" />
     <None Include="Resources\books.png" />
     <Content Include="Resources\home_logo.png" />
+    <None Include="Resources\library_card.png" />
+    <None Include="Resources\librarian.png" />
     <Content Include="Resources\login.jpg" />
     <Content Include="Resources\logo.png" />
     <Content Include="Resources\logoo.jpg" />
