--- a/LibraryManagement.csproj
+++ b/LibraryManagement.csproj
@@ -46,8 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\BorrowSlip.cs" />
-    <Compile Include="Models\BorrowSlipDetail.cs" />
+    <Compile Include="Models\PhieuMuon.cs" />
     <Compile Include="Models\CuonSach.cs" />
     <Compile Include="Models\CuonSachDetailModel.cs" />
     <Compile Include="Models\DauSach.cs" />
@@ -59,8 +58,7 @@
     <Compile Include="Models\TheThuVien.cs" />
     <Compile Include="Models\ThongKe.cs" />
     <Compile Include="Models\ThuThu.cs" />
-    <Compile Include="Repositories\BorrowSlipDetailRepository.cs" />
-    <Compile Include="Repositories\BorrowSlipRepository.cs" />
+    <Compile Include="Repositories\PhieuMuonDAO.cs" />
     <Compile Include="Repositories\CuonSachRepository.cs" />
     <Compile Include="Repositories\DauSachRepository.cs" />
     <Compile Include="Repositories\DauSachTacGiaRepository.cs" />
@@ -71,7 +69,6 @@
     <Compile Include="Repositories\TheLoaiRepository.cs" />
     <Compile Include="Repositories\TheThuVienDAO.cs" />
     <Compile Include="Repositories\ThuThuDAO.cs" />
-    <Compile Include="Services\BorrowService.cs" />
     <Compile Include="Services\ImportExcelToDatabase.cs" />
     <Compile Include="UI\AuthorModal.cs">
       <SubType>Form</SubType>
@@ -84,6 +81,12 @@
     </Compile>
     <Compile Include="UI\DocGiaManagement.Designer.cs">
       <DependentUpon>DocGiaManagement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\FormAddPhieuMuon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FormAddPhieuMuon.Designer.cs">
+      <DependentUpon>FormAddPhieuMuon.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\FormAddTheLoai.cs">
       <SubType>Form</SubType>
