--- a/LibraryManagement.csproj
+++ b/LibraryManagement.csproj
@@ -76,17 +76,29 @@
     <Compile Include="UI\AuthorModal.Designer.cs">
       <DependentUpon>AuthorModal.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\FormAddPhieuMuon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FormAddPhieuMuon.Designer.cs">
+      <DependentUpon>FormAddPhieuMuon.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\FormChiTietPhieuMuon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FormChiTietPhieuMuon.Designer.cs">
+      <DependentUpon>FormChiTietPhieuMuon.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\DocGiaManagement.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\DocGiaManagement.Designer.cs">
       <DependentUpon>DocGiaManagement.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\FormAddPhieuMuon.cs">
+    <Compile Include="UI\FormEditPhieuMuon.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\FormAddPhieuMuon.Designer.cs">
-      <DependentUpon>FormAddPhieuMuon.cs</DependentUpon>
+    <Compile Include="UI\FormEditPhieuMuon.Designer.cs">
+      <DependentUpon>FormEditPhieuMuon.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\FormAddTheLoai.cs">
       <SubType>Form</SubType>
@@ -191,17 +203,17 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\Login.Designer.cs" />
-    <Compile Include="UI\UC_BorrowSlip.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UI\UC_BorrowSlip.Designer.cs">
-      <DependentUpon>UC_BorrowSlip.cs</DependentUpon>
-    </Compile>
     <Compile Include="UserControls\DocGiaManagement.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UserControls\DocGiaManagement.Designer.cs">
       <DependentUpon>DocGiaManagement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\PhieuMuonManagement.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\PhieuMuonManagement.Designer.cs">
+      <DependentUpon>PhieuMuonManagement.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControls\SachControl.cs">
       <SubType>UserControl</SubType>
@@ -245,8 +257,14 @@
     <EmbeddedResource Include="UI\FormAddTG.resx">
       <DependentUpon>FormAddTG.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\FormChiTietPhieuMuon.resx">
+      <DependentUpon>FormChiTietPhieuMuon.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\FormDocGiaManagement.resx">
       <DependentUpon>FormDocGiaManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\FormEditPhieuMuon.resx">
+      <DependentUpon>FormEditPhieuMuon.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
@@ -262,8 +280,8 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="UI\Login.resx" />
-    <EmbeddedResource Include="UI\UC_BorrowSlip.resx">
-      <DependentUpon>UC_BorrowSlip.cs</DependentUpon>
+    <EmbeddedResource Include="UserControls\PhieuMuonManagement.resx">
+      <DependentUpon>PhieuMuonManagement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\SachControl.resx">
       <DependentUpon>SachControl.cs</DependentUpon>
