CRUD, search receipt

--- a/LibraryManagement.csproj
+++ b/LibraryManagement.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\BienLai.cs" />
     <Compile Include="Models\PhieuMuon.cs" />
     <Compile Include="Models\CuonSach.cs" />
     <Compile Include="Models\CuonSachDetailModel.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="Models\TheThuVien.cs" />
     <Compile Include="Models\ThongKe.cs" />
     <Compile Include="Models\ThuThu.cs" />
+    <Compile Include="Repositories\BienLaiDAO.cs" />
     <Compile Include="Repositories\PhieuMuonDAO.cs" />
     <Compile Include="Repositories\CuonSachRepository.cs" />
     <Compile Include="Repositories\DauSachRepository.cs" />
@@ -76,6 +78,12 @@
     <Compile Include="UI\AuthorModal.Designer.cs">
       <DependentUpon>AuthorModal.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\FormAddBienLai.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FormAddBienLai.Designer.cs">
+      <DependentUpon>FormAddBienLai.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\FormAddPhieuMuon.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +101,12 @@
     </Compile>
     <Compile Include="UI\DocGiaManagement.Designer.cs">
       <DependentUpon>DocGiaManagement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\FormEditBienLai.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FormEditBienLai.Designer.cs">
+      <DependentUpon>FormEditBienLai.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\FormEditPhieuMuon.cs">
       <SubType>Form</SubType>
@@ -203,6 +217,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\Login.Designer.cs" />
+    <Compile Include="UserControls\BienLaiManagement.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\BienLaiManagement.Designer.cs">
+      <DependentUpon>BienLaiManagement.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\DocGiaManagement.cs">
       <SubType>UserControl</SubType>
     </Compile>
