--- a/LibraryManagement.csproj
+++ b/LibraryManagement.csproj
@@ -33,6 +33,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="QRCoder, Version=1.6.0.0, Culture=neutral, PublicKeyToken=c4ed5b9ae8358a28, processorArchitecture=MSIL">
+      <HintPath>packages\QRCoder.1.6.0\lib\net40\QRCoder.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -45,6 +50,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\BienLai.cs" />
@@ -212,6 +218,12 @@
     <Compile Include="UI\FormManageTheLoai.Designer.cs">
       <DependentUpon>FormManageTheLoai.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\FormQRDisplay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FormQRDisplay.Designer.cs">
+      <DependentUpon>FormQRDisplay.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\FormThongKe.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -303,6 +315,7 @@
     <Compile Include="UserControls\ThuThuUC.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Utilities\QRCodeManager.cs" />
     <EmbeddedResource Include="UI\FormAddCuonSach.resx">
       <DependentUpon>FormAddCuonSach.cs</DependentUpon>
     </EmbeddedResource>
@@ -359,6 +372,7 @@
     <EmbeddedResource Include="UserControls\ThuThuManagement.resx">
       <DependentUpon>ThuThuManagement.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
