--- a/LibraryManagement.csproj
+++ b/LibraryManagement.csproj
@@ -53,6 +53,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS\CuonSachBLL.cs" />
+    <Compile Include="BUS\DauSachBLL.cs" />
+    <Compile Include="BUS\NXBBLL.cs" />
+    <Compile Include="BUS\TacGiaBLL.cs" />
+    <Compile Include="BUS\TheLoaiBLL.cs" />
+    <Compile Include="BUS\UserBLL.cs" />
     <Compile Include="Models\BienLai.cs" />
     <Compile Include="Models\PhieuMuon.cs" />
     <Compile Include="Models\CuonSach.cs" />
@@ -82,7 +88,7 @@
     <Compile Include="Repositories\TheThuVienDAO.cs" />
     <Compile Include="Repositories\ThongKeDAO.cs" />
     <Compile Include="Repositories\ThuThuDAO.cs" />
-    <Compile Include="Services\ImportExcelToDatabase.cs" />
+    <Compile Include="BUS\ImportExcelToDatabase.cs" />
     <Compile Include="UI\AuthorModal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -247,7 +253,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DBConnection.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
-    <Compile Include="Services\AuthService.cs" />
+    <Compile Include="BUS\AuthService.cs" />
     <Compile Include="UI\Login.cs">
       <SubType>Form</SubType>
     </Compile>
