--- a/LibraryManagement.csproj
+++ b/LibraryManagement.csproj
@@ -53,8 +53,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS\AuthBLL.cs" />
     <Compile Include="BUS\CuonSachBLL.cs" />
     <Compile Include="BUS\DauSachBLL.cs" />
+    <Compile Include="BUS\ImportExcelToDatabaseBLL.cs" />
     <Compile Include="BUS\NXBBLL.cs" />
     <Compile Include="BUS\TacGiaBLL.cs" />
     <Compile Include="BUS\TheLoaiBLL.cs" />
@@ -88,7 +90,6 @@
     <Compile Include="Repositories\TheThuVienDAO.cs" />
     <Compile Include="Repositories\ThongKeDAO.cs" />
     <Compile Include="Repositories\ThuThuDAO.cs" />
-    <Compile Include="BUS\ImportExcelToDatabase.cs" />
     <Compile Include="UI\AuthorModal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -253,7 +254,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DBConnection.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
-    <Compile Include="BUS\AuthService.cs" />
     <Compile Include="UI\Login.cs">
       <SubType>Form</SubType>
     </Compile>
