--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,8 @@
   <package id="EPPlus" version="8.0.5" targetFramework="net472" />
   <package id="EPPlus.Interfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="QRCoder" version="1.6.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
